--- a/app/src/main/res/layout/fragment_bind_camera.xml
+++ b/app/src/main/res/layout/fragment_bind_camera.xml
@@ -23,7 +23,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/y20"
         android:gravity="center"
-        android:text="长按WiFi键"
+        android:text="@string/Tap1_AddDevice_CameraTipsTitle"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp26" />
 
@@ -34,7 +34,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/y15"
         android:gravity="center"
-        android:text="等待蓝灯闪烁"
+        android:text="@string/Tap1_AddDevice_CameraTips"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp16" />
 
@@ -44,7 +44,7 @@
         android:layout_height="@dimen/y1"
         android:layout_centerInParent="true" />
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -55,33 +55,34 @@
             android:id="@+id/imgV_camera_wifi_light_flash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:background="@drawable/add_image_wifilight" />
 
-        <ImageView
-            android:id="@+id/imgV_camera_red_dot"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imgV_camera_wifi_light_flash"
-            android:layout_centerHorizontal="true"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="@dimen/y20"
             android:layout_marginTop="@dimen/y20"
-            android:src="@drawable/add_image_red_dot" />
+            android:orientation="vertical">
 
-        <View
-            android:id="@+id/v"
-            android:layout_width="1dp"
-            android:layout_height="1dp"
-            android:layout_centerInParent="true" />
+            <ImageView
+                android:id="@+id/imgV_camera_red_dot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="-20dp"
+                android:src="@drawable/add_image_red_dot" />
 
-        <ImageView
-            android:id="@+id/imgV_camera_hand"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/v"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/y10"
-            android:src="@drawable/image_hand" />
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/imgV_camera_hand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/y10"
+                android:src="@drawable/image_hand" />
+        </LinearLayout>
+
+    </FrameLayout>
 
 
     <View
