--- a/app/src/main/res/layout/fragment_facility_information.xml
+++ b/app/src/main/res/layout/fragment_facility_information.xml
@@ -163,6 +163,8 @@
                     android:textSize="@dimen/sp16" />
 
                 <TextView
+                    android:visibility="gone"
+                    android:id="@+id/tv_new_software"
                     android:layout_below="@id/update_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -172,13 +174,13 @@
                     android:textSize="@dimen/sp13" />
 
                 <View
+                    android:visibility="invisible"
                     android:id="@+id/hardware_update_point"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:background="@drawable/hardware_update_point"
                     android:layout_width="@dimen/x7"
                     android:layout_height="@dimen/y7"/>
-
 
             </RelativeLayout>
 
