--- a/app/src/main/res/layout/fragment_hardware_update.xml
+++ b/app/src/main/res/layout/fragment_hardware_update.xml
@@ -83,6 +83,7 @@
 
 
         <RelativeLayout
+            android:id="@+id/rl_new_version_describe_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -106,7 +107,14 @@
                 android:textColor="#8c8c8c"
                 android:textSize="@dimen/sp14" />
 
+            <TextView
+                android:layout_below="@id/tv_hardware_update_title"
+                android:id="@+id/tv_version_describe"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <View
+                android:visibility="invisible"
                 android:layout_marginRight="@dimen/x20"
                 android:id="@+id/hardware_update_point"
                 android:layout_alignParentRight="true"
@@ -134,6 +142,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/ll_download_pg_container"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
@@ -146,6 +155,7 @@
             android:layout_height="@dimen/y1"/>
 
         <TextView
+            android:id="@+id/tv_loading_show"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/y19"
             android:text="3.5MB/34MB"
@@ -163,7 +173,7 @@
             android:layout_width="@dimen/x319"
             android:layout_height="5dp"
             android:indeterminateOnly="false"
-            android:progress="30"
+            android:progress="0"
             android:max="100"
             android:progressDrawable="@drawable/download_drawable_color" />
     </LinearLayout>
