--- a/app/src/main/res/layout/fragment_home_mine_setting_about.xml
+++ b/app/src/main/res/layout/fragment_home_mine_setting_about.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:background="@color/color_white"
     android:clickable="true"
     android:layout_width="match_parent"
@@ -44,7 +43,6 @@
         android:layout_height="wrap_content">
 
         <RelativeLayout
-
             android:layout_width="match_parent"
             android:layout_height="@dimen/y216">
 
@@ -167,6 +165,7 @@
         android:layout_height="wrap_content" />
 
         <TextView
+            android:id="@+id/tv_copy_right"
             android:textColor="@color/color_adadad"
             android:textSize="@dimen/sp11"
             android:layout_gravity="center_horizontal"
@@ -177,3 +176,4 @@
     </LinearLayout>
 
 </RelativeLayout>
+
