--- a/app/src/main/res/layout/fragment_home_mine_setting_about.xml
+++ b/app/src/main/res/layout/fragment_home_mine_setting_about.xml
@@ -79,6 +79,7 @@
             android:textSize="@dimen/sp16" />
 
         <TextView
+            android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_copy_right"
