--- a/app/src/main/res/layout/fragment_panoramic_view.xml
+++ b/app/src/main/res/layout/fragment_panoramic_view.xml
@@ -5,7 +5,7 @@
     android:background="@color/color_black"
     android:clickable="true"
     android:fitsSystemWindows="true"
-    tools:context=".n.view.media.BigPicFragment">
+    tools:context=".n.view.media.NormalMediaFragment">
 
     <VideoView
         android:id="@+id/vv_play_video"
