--- a/app/src/main/res/layout/fragment_normal_big_pic.xml
+++ b/app/src/main/res/layout/fragment_normal_big_pic.xml
@@ -5,7 +5,7 @@
     android:background="@color/color_black"
     android:clickable="true"
     android:fitsSystemWindows="true"
-    tools:context=".n.view.media.BigPicFragment">
+    tools:context=".n.view.media.NormalMediaFragment">
 
     <com.cylan.jiafeigou.support.photoview.PhotoView
         android:id="@+id/imgV_show_pic"
