--- a/app/src/main/res/layout/layout_wifi_list_item.xml
+++ b/app/src/main/res/layout/layout_wifi_list_item.xml
@@ -4,28 +4,35 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/y72"
     android:background="@android:color/white"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="@dimen/x5"
     tools:context="com.cylan.jiafeigou.n.view.setting.WifiListFragment">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imv_wifi_ssid"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/x10"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@+id/tv_wifi_ssid"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:textColor="@color/color_black"
+            android:textSize="@dimen/sp16" />
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/color_e8e8e8" />
-
-    <ImageView
-        android:id="@+id/imv_wifi_ssid"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginEnd="@dimen/x10"
-        android:gravity="center" />
-
-    <TextView
-        android:id="@+id/tv_wifi_ssid"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:gravity="center"
-        android:textColor="@color/color_black"
-        android:textSize="@dimen/sp16" />
 </LinearLayout>
