--- a/app/src/main/res/layout/fragment_config_ap.xml
+++ b/app/src/main/res/layout/fragment_config_ap.xml
@@ -9,12 +9,14 @@
     android:orientation="vertical"
     tools:context=".n.view.bind.ConfigApFragment">
 
+    <Space
+        android:layout_width="@dimen/x1"
+        android:layout_height="@dimen/y33" />
 
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/custom_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        hunt:ct_fit_system_window="true"
         hunt:ct_icon="@drawable/nav_icon_back_gary" />
 
     <ViewSwitcher
