1.我的消息获取未读消息 2.用户昵称修改不用随机 3.设备信息页sd卡读取失败点击弹框提示 4.邮箱修改验证链接 5.官网点击链接修改

--- a/app/src/main/res/layout/fragment_home_mine_message.xml
+++ b/app/src/main/res/layout/fragment_home_mine_message.xml
@@ -61,7 +61,7 @@
         <RelativeLayout
             android:id="@+id/rl_delete_dialog"
             android:visibility="gone"
-            android:background="#11000000"
+            android:background="#f2f2f2"
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y50">
