--- a/app/src/main/res/layout/layout_dialog_share_wonderful.xml
+++ b/app/src/main/res/layout/layout_dialog_share_wonderful.xml
@@ -8,57 +8,57 @@
     tools:context="com.cylan.jiafeigou.n.view.bind.BindDeviceListFragment">
 
     <LinearLayout
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
         <TextView
-            android:clickable="true"
             android:id="@+id/tv_share_to_timeline"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y48"
-            android:drawableStart="@drawable/icon_friend"
+            android:clickable="true"
             android:drawablePadding="@dimen/y20"
+            android:drawableStart="@drawable/icon_friend"
             android:gravity="center_vertical"
-            android:paddingStart="@dimen/y20"
             android:paddingEnd="@dimen/y20"
-            android:text="@string/WE_FRIENDS" />
+            android:paddingStart="@dimen/y20"
+            android:text="@string/Tap2_Share_Moments" />
 
         <TextView
-            android:clickable="true"
             android:id="@+id/tv_share_to_wechat_friends"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y48"
-            android:drawableStart="@drawable/icon_wechat"
+            android:clickable="true"
             android:drawablePadding="@dimen/y20"
+            android:drawableStart="@drawable/icon_wechat"
             android:gravity="center_vertical"
-            android:paddingStart="@dimen/y20"
             android:paddingEnd="@dimen/y20"
-            android:text="@string/WE_CHAT" />
+            android:paddingStart="@dimen/y20"
+            android:text="@string/Tap2_Share_Wechat" />
 
         <TextView
-            android:clickable="true"
             android:id="@+id/tv_share_to_twitter_friends"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y48"
-            android:drawableStart="@drawable/twitter_icon_twitter"
+            android:clickable="true"
             android:drawablePadding="@dimen/y20"
+            android:drawableStart="@drawable/twitter_icon_twitter"
             android:gravity="center_vertical"
-            android:paddingStart="@dimen/y20"
             android:paddingEnd="@dimen/y20"
-            android:text="@string/TWITTER" />
+            android:paddingStart="@dimen/y20"
+            android:text="twitter" />
 
         <TextView
-            android:clickable="true"
             android:id="@+id/tv_share_to_facebook_friends"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y48"
-            android:drawableStart="@drawable/share_icon_facebook"
+            android:clickable="true"
             android:drawablePadding="@dimen/x20"
+            android:drawableStart="@drawable/share_icon_facebook"
             android:gravity="center_vertical"
-            android:paddingStart="@dimen/x20"
             android:paddingEnd="@dimen/x20"
-            android:text="@string/FACEBOOK" />
+            android:paddingStart="@dimen/x20"
+            android:text="facebook" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
