1.意见反馈日志上传失败解决 2.登录账号输入不换行bug 3.分享设备列表过滤分享到的设备 4.SD卡格式化显示修改 5.注册输入框显示提示修改

--- a/app/src/main/res/layout/fragment_login_layout_login_box.xml
+++ b/app/src/main/res/layout/fragment_login_layout_login_box.xml
@@ -26,9 +26,10 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:gravity="center"
-            android:hint="@string/Tap0_enterphoneoremail"
-            android:maxLength="60"
+            android:hint="@string/PHONE_NUMBER"
+            android:maxLength="65"
             android:maxLines="1"
+            android:singleLine="true"
             android:paddingLeft="@dimen/x40"
             android:paddingRight="@dimen/x40"
             android:textColor="@color/color_666666"
