--- a/app/src/main/res/layout/fragment_login_layout_register_box.xml
+++ b/app/src/main/res/layout/fragment_login_layout_register_box.xml
@@ -31,7 +31,7 @@
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:gravity="center"
-                android:hint="@string/PHONE_NUMBER_2"
+                android:hint="@string/PHONE_NUMBER"
                 android:inputType="phone"
                 android:maxLength="11"
                 android:maxLines="1"
