--- a/app/src/main/res/drawable/media_seek_bar_drawable.xml
+++ b/app/src/main/res/drawable/media_seek_bar_drawable.xml
@@ -16,14 +16,15 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@android:id/background"
+        android:drawable="@drawable/bg_seek_bar"
         android:gravity="center_vertical|fill_horizontal">
-        <shape
-            android:shape="rectangle"
-            android:tint="#33FFFFFF">
-            <size android:height="@dimen/y2" />
-            <solid android:color="#FFFFFF" />
-            <corners android:radius="@dimen/y1" />
-        </shape>
+        <!--<shape-->
+        <!--android:shape="rectangle"-->
+        <!--android:tint="#33FFFFFF">-->
+        <!--<size android:height="@dimen/y2" />-->
+        <!--<solid android:color="#FFFFFF" />-->
+        <!--<corners android:radius="@dimen/y1" />-->
+        <!--</shape>-->
     </item>
     <!--<item-->
     <!--android:id="@android:id/secondaryProgress"-->
@@ -52,7 +53,7 @@
                 <item
                     android:drawable="@android:color/transparent"
                     android:state_enabled="false" />
-                <item android:drawable="@drawable/progress_seek_bar">
+                <item android:drawable="@drawable/seek_bar">
                     <!--<shape-->
                     <!--android:shape="rectangle"-->
                     <!--android:tint="#CCCCCC">-->
