--- a/app/src/main/res/layout/layout_bell_pre_live_hot_seat.xml
+++ b/app/src/main/res/layout/layout_bell_pre_live_hot_seat.xml
@@ -6,34 +6,35 @@
     android:layout_height="wrap_content"
     hunt:ll_big_outer_radius="@dimen/y10">
 
-        <com.cylan.jiafeigou.widget.bell.LLView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/y50"
-            android:layout_gravity="center_vertical"
-            hunt:ll_big_inner_color="@color/color_FF1744"
-            hunt:ll_big_inner_radius="@dimen/y5"
-            hunt:ll_big_outer_color="@color/color_33FF1744"
-            hunt:ll_big_outer_radius="@dimen/y10"
-            hunt:ll_small_color="@color/color_33FF1744"
-            hunt:ll_small_interval="@dimen/y10"
-            hunt:ll_small_radius="@dimen/y2" />
+    <com.cylan.jiafeigou.widget.bell.LLView
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/y50"
+        android:layout_gravity="center_vertical"
+        hunt:ll_big_inner_color="@color/color_FF1744"
+        hunt:ll_big_inner_radius="@dimen/y5"
+        hunt:ll_big_outer_color="@color/color_33FF1744"
+        hunt:ll_big_outer_radius="@dimen/y10"
+        hunt:ll_small_color="@color/color_33FF1744"
+        hunt:ll_small_interval="@dimen/y10"
+        hunt:ll_small_radius="@dimen/y2" />
 
-        <com.cylan.jiafeigou.widget.bell.LLView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/y50"
-            android:layout_gravity="center_vertical|end"
-            hunt:ll_big_inner_color="@color/color_41B56A"
-            hunt:ll_big_inner_radius="@dimen/y5"
-            hunt:ll_big_outer_color="@color/color_3341B56A"
-            hunt:ll_big_outer_radius="@dimen/y10"
-            hunt:ll_reverse="true"
-            hunt:ll_small_color="@color/color_3341B56A"
-            hunt:ll_small_interval="@dimen/y10"
-            hunt:ll_small_radius="@dimen/y2" />
+    <com.cylan.jiafeigou.widget.bell.LLView
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/y50"
+        android:layout_gravity="center_vertical|end"
+        hunt:ll_big_inner_color="@color/color_41B56A"
+        hunt:ll_big_inner_radius="@dimen/y5"
+        hunt:ll_big_outer_color="@color/color_3341B56A"
+        hunt:ll_big_outer_radius="@dimen/y10"
+        hunt:ll_reverse="true"
+        hunt:ll_small_color="@color/color_3341B56A"
+        hunt:ll_small_interval="@dimen/y10"
+        hunt:ll_small_radius="@dimen/y2" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/icon_bell_ringing" />
+    <ImageView
+        android:id="@+id/view_bell_handle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/icon_bell_ringing" />
 </com.cylan.jiafeigou.widget.bell.DragLayout>
