--- a/app/src/main/res/layout/layout_settings_item0.xml
+++ b/app/src/main/res/layout/layout_settings_item0.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="@dimen/y72">
 
     <ImageView
         android:id="@+id/imgv_item_icon"
@@ -51,6 +51,17 @@
         android:gravity="end"
         android:paddingStart="@dimen/x20" />
 
+    <ImageView
+        android:id="@+id/imv_item_red_hint"
+        android:layout_width="@dimen/x8"
+        android:layout_height="@dimen/x8"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="@dimen/x10"
+        android:layout_marginStart="@dimen/x10"
+        android:src="@drawable/hardware_update_point"
+        android:visibility="gone" />
+
     <View
         android:id="@+id/v_divider"
         android:layout_width="match_parent"
@@ -59,4 +70,4 @@
         android:layout_marginEnd="@dimen/x10"
         android:layout_marginStart="@dimen/x10"
         android:background="@color/color_e8e8e8" />
-</merge>
+</RelativeLayout>
