--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -127,6 +127,7 @@
         <attr name="progress_radius" format="dimension" />
     </declare-styleable>
     <declare-styleable name="SettingItemViewStyle">
+        <attr name="sv_red_hint" format="boolean|reference" />
         <attr name="sv_title" format="string|reference" />
         <attr name="sv_sub_title" format="string|reference" />
         <attr name="sv_sub_title_max_len" format="integer" />
