--- a/app/src/main/res/layout/layout_fragment_bell_detail_setting.xml
+++ b/app/src/main/res/layout/layout_fragment_bell_detail_setting.xml
@@ -22,10 +22,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/y48"
                 android:drawableLeft="@drawable/nav_tab_back_selector"
-                android:drawablePadding="@dimen/x15"
+                android:drawablePadding="@dimen/y15"
                 android:gravity="center_vertical"
-                android:paddingLeft="@dimen/x15"
-                android:text="@string/SETTINGS_1"
+                android:paddingLeft="@dimen/y15"
+                android:text="@string/EQUIPMENT_INFO"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/sp18" />
         </FrameLayout>
@@ -50,11 +50,11 @@
                 android:id="@+id/sv_setting_device_alias"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y72"
-                android:layout_marginLeft="@dimen/x20"
-                android:layout_marginRight="@dimen/x20"
+                android:layout_marginLeft="@dimen/y20"
+                android:layout_marginRight="@dimen/y20"
                 hunt:sv_image_src="@drawable/setting_icon_information"
-                hunt:sv_sub_title="@string/EQUIPMENT_INFO"
-                hunt:sv_title="@string/EQUIPMENT_INFO"
+                hunt:sv_sub_title="@string/EQUIPMENT_NAME"
+                hunt:sv_title="@string/EQUIPMENT_NAME"
                 hunt:sv_v_divider="true"
                 hunt:sv_v_image_show="false" />
 
@@ -68,31 +68,31 @@
                     android:id="@+id/sv_setting_hardware_update"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/y72"
-                    android:layout_marginLeft="@dimen/x20"
-                    android:layout_marginRight="@dimen/x20"
+                    android:layout_marginLeft="@dimen/y20"
+                    android:layout_marginRight="@dimen/y20"
                     hunt:sv_image_src="@drawable/setting_icon_information"
                     hunt:sv_sub_title=""
-                    hunt:sv_title="固件升级"
+                    hunt:sv_title="@string/Tap1_FirmwareUpdate"
                     hunt:sv_v_divider="true"
                     hunt:sv_v_image_show="false" />
 
                 <View
-                    android:visibility="invisible"
-                    android:layout_marginRight="@dimen/x20"
                     android:id="@+id/hardware_update_point"
+                    android:layout_width="@dimen/y7"
+                    android:layout_height="@dimen/y7"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/y20"
                     android:background="@drawable/hardware_update_point"
-                    android:layout_width="@dimen/x7"
-                    android:layout_height="@dimen/y7"/>
+                    android:visibility="invisible" />
             </RelativeLayout>
 
             <com.cylan.jiafeigou.widget.SettingItemView0
                 android:id="@+id/sv_setting_device_cid"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y72"
-                android:layout_marginLeft="@dimen/x20"
-                android:layout_marginRight="@dimen/x20"
+                android:layout_marginLeft="@dimen/y20"
+                android:layout_marginRight="@dimen/y20"
                 hunt:sv_image_src="@drawable/setting_icon_information"
                 hunt:sv_title="@string/Tap1_Setting_Cid"
                 hunt:sv_v_divider="true"
@@ -102,8 +102,8 @@
                 android:id="@+id/sv_setting_device_wifi"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y72"
-                android:layout_marginLeft="@dimen/x20"
-                android:layout_marginRight="@dimen/x20"
+                android:layout_marginLeft="@dimen/y20"
+                android:layout_marginRight="@dimen/y20"
                 hunt:sv_image_src="@drawable/setting_icon_information"
                 hunt:sv_title="@string/device_Wi_Fi"
                 hunt:sv_v_divider="true"
@@ -113,8 +113,8 @@
                 android:id="@+id/sv_setting_device_mac"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y72"
-                android:layout_marginLeft="@dimen/x20"
-                android:layout_marginRight="@dimen/x20"
+                android:layout_marginLeft="@dimen/y20"
+                android:layout_marginRight="@dimen/y20"
                 hunt:sv_image_src="@drawable/setting_icon_information"
                 hunt:sv_title="@string/MAC"
                 hunt:sv_v_divider="true"
@@ -124,8 +124,8 @@
                 android:id="@+id/sv_setting_device_sys_version"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y72"
-                android:layout_marginLeft="@dimen/x20"
-                android:layout_marginRight="@dimen/x20"
+                android:layout_marginLeft="@dimen/y20"
+                android:layout_marginRight="@dimen/y20"
                 hunt:sv_image_src="@drawable/setting_icon_information"
                 hunt:sv_title="@string/SYSTME_VERSION"
                 hunt:sv_v_divider="true"
@@ -135,8 +135,9 @@
                 android:id="@+id/sv_setting_device_version"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y72"
-                android:layout_marginLeft="@dimen/x20"
-                android:layout_marginRight="@dimen/x20"
+                android:layout_marginLeft="@dimen/y20"
+                android:layout_marginRight="@dimen/y20"
+                android:visibility="gone"
                 hunt:sv_image_src="@drawable/setting_icon_information"
                 hunt:sv_title="@string/SOFTWARE_VERSION"
                 hunt:sv_v_divider="true"
