--- a/app/src/main/res/layout/activity_door_bell.xml
+++ b/app/src/main/res/layout/activity_door_bell.xml
@@ -54,7 +54,7 @@
         <include
             android:id="@+id/fragment_bell_home_empty"
             layout="@layout/layout_wonderful_list_empty_view"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <FrameLayout
             android:id="@+id/fLayout_bell_home_list_edition"
