--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -6,17 +6,17 @@
 
 
     <FrameLayout
-
         android:id="@+id/fLayout_splash"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/color_36BDFF">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/y200"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/logo_splash_screen" />
 
         <TextView
             android:id="@+id/tv_copy_right"
