--- a/app/src/main/res/layout/layout_fragment_bell_setting.xml
+++ b/app/src/main/res/layout/layout_fragment_bell_setting.xml
@@ -26,7 +26,7 @@
                 android:drawableStart="@drawable/nav_tab_back_selector"
                 android:gravity="center_vertical"
                 android:paddingStart="@dimen/y15"
-                android:text="@string/EQUIPMENT_INFO"
+                android:text="@string/SETTINGS_1"
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/sp18" />
         </FrameLayout>
@@ -91,7 +91,7 @@
             android:layout_height="@dimen/y52"
             android:gravity="center_vertical"
             android:paddingEnd="@dimen/y20"
-            android:paddingStart="@dimen/y20"
+            android:paddingStart="@dimen/y30"
             android:text="@string/DOOR_CLEAR_REOCRD"
             android:textColor="@color/color_black"
             android:textSize="@dimen/sp16" />
